code smell fix.